test/sema/lambda-capture-field.delta.output
lambda-capture-field.delta:8:43: error: unknown identifier 'd'
        var b = (int c, int a) -> c + a + d;
                                          ^
