test/sema/lambda-capture-field.delta
// RUN: %check_errors %not %delta -typecheck %s

struct S {
    int d;

    void foo() {
        // CHECK: [[@LINE+1]]:43: error: unknown identifier 'd'
        var b = (int c, int a) -> c + a + d;
    }
}
